--- a/WebApi/Properties/launchSettings.json
+++ b/WebApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "WebApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      // "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7251;http://localhost:5251",
       "environmentVariables": {
